--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 torch>=2.0.0
-transformers>=4.30.0
 pydantic>=2.0.0
-accelerate>=0.20.0
+python-dotenv>=1.0.0
+
+# For local inference (vLLM)
+vllm>=0.3.0
+
+# For OpenRouter API
+openai>=1.0.0
